@@ -10,6 +10,7 @@ sunuo (0.1.9) unstable; urgency=low
   * added option to set the C# compiler's warning level
   * fixed NullReferenceException in binary library loader
   * library names are case insensitive
+  * added the --logfile option
 
  --
 
